ubiquity (2.2.17) UNRELEASED; urgency=low

  [ Mario Limonciello ]
  * Remove unused install_bottom_eb from GTK frontend's install_window.

  [ Evan Dandrea ]
  * Catch invalid iterators in on_region_combo_changed (LP: #521851).
  * Don't let not being able to talk to the system bus crash the entire
    language page.

  [ Colin Watson ]
  * Skip copy_wallpaper_cache when running as oem-config.

  [ Amichai Rothman ]
  * Fix hang unless mouse is moved (LP: #556376)

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Sun, 11 Apr 2010 00:31:15 -0500

ubiquity (2.2.16) lucid; urgency=low

  [ Evan Dandrea ]
  * Only show the update link and release notes when a critical update
    is available (LP: #554570).
  * Fix backing up to the language page in the KDE frontend (LP: #557225).
  * Bring back the debconf translation for password_extra_label.  The
    KDE frontend still uses it (LP: #557192).
  * Fix a small typo that was preventing the duration string on the
    language page from being translated (LP: #551633).
  * Fix backing up past partitioning when manual partitioning was
    selected (LP: #557210).
  * Let the user know why we're starting a desktop session or rebooting
    when ubiquity in only mode crashes.  If in automatic mode, the
    default is to reboot.  Preseed ubiquity/reboot_on_failure to false
    to start a desktop session instead (LP: #558371).
  * Make oem-config/install-language-support false by default.  OEMs
    should only be turning this on if they've provided all the possible
    langpacks in oem-config/repository or can guarantee an Internet
    connection (LP: #539710).
  * Call ubiquity/failure_command if we crash in only ubiquity mode.

  [ Amichai Rothman ]
  * Fix KDE frontend's slideshow links not working (LP: #540278)
  * Fix KDE progress bar and skip button too small (LP: #555707)
  * Fix KDE skip button appearing as full-width button at the
    bottom of the window and messing up dialog layout (LP: #540321)